# Py_WEB_10

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
hw_10/: db.sqlite3  manage.py
hw_10/hw_10/: asgi.py  settings.py  urls.py  wsgi.py
hw_10/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw_10/quotes/migrations/: 0001_initial.py  0002_alter_author_born_location_alter_author_fullname.py  0003_remove_author_updated_at_author_is_active_and_more.py
hw_10/quotes/static/quotes/: style.css
hw_10/quotes/templates/quotes/: add_tag.html  author.html  base.html  index.html  tag.html
hw_10/quotes/templatetags/: extract.py  extract_author.py  extract_tags.py
hw_10/users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
hw_10/users/migrations/: 0001_initial.py
hw_10/users/templates/users/: delete.html  login.html  logout.html  password_reset.html  profile.html  signup.html
hw_10/utils/: add_quotes_to_mongo.py  migration.py
hw_10/utils/data/: authors.json
