[tool.poetry]
name = "py-web-10"
version = "0.1.0"
description = ""
authors = ["Serghei <siracencoserghei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
bson = "^0.5.10"


[tool.poetry.group.dev.dependencies]
asgiref = "3.7.2"
django = "5.0.3"
dnspython = "2.6.1"
pillow = "10.2.0"
psycopg2 = "2.9.9"
pymongo = "4.6.2"
python-dotenv = "1.0.1"
sqlparse = "0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
